Added validation testing
And some dependencies. Not all of them are used yet, but would be valuable to do some UI testing.